--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import 'tailwindcss';
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -52,6 +54,11 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+
+nav button:hover {
+  font-weight: 800;
+  color: #646cff !important;
 }
 
 @media (prefers-color-scheme: light) {
